--- a/devtools/client/inspector/rules/test/browser.ini
+++ b/devtools/client/inspector/rules/test/browser.ini
@@ -73,6 +73,7 @@ skip-if = (verify && debug && os == 'win')
 [browser_rules_add-rule.js]
 [browser_rules_authored.js]
 [browser_rules_authored_color.js]
+skip-if = !debug && (os == 'linux' && bits == 64 && os_version == '18.04') || (os == 'mac' && os_version == '10.14' && bits == 64) # Bug 1559315
 [browser_rules_authored_override.js]
 [browser_rules_blob_stylesheet.js]
 [browser_rules_class_panel_add.js]
