--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -2417,6 +2417,11 @@
   value: true
   mirror: always
 
+- name: dom.arena_allocator.enabled
+  type: bool
+  value: false
+  mirror: once
+
 - name: dom.serviceWorkers.enabled
   type: RelaxedAtomicBool
   value: false
