--- a/netwerk/dns/tests/unit/xpcshell.ini
+++ b/netwerk/dns/tests/unit/xpcshell.ini
@@ -7,5 +7,6 @@ support-files =
   !/services/common/tests/unit/head_helpers.js
 
 [test_PublicSuffixList.js]
+tags = remote-settings
 [test_nsEffectiveTLDService_getKnownPublicSuffix.js]
 [test_nsEffectiveTLDService_Reload_DAFSA.js]
