Bug 1618919 - re-enable jit-tests on android-hw-aarch64 to match android-hw-arm7 r=jmaher,aerickson
Differential Revision: https://phabricator.services.mozilla.com/D67315

--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -574,6 +574,7 @@ android-hw-arm7-pgo-unittests:
     - jsreftest
 
 android-hw-aarch64-pgo-unittests:
+    - jittest
     - mochitest-media
 
 android-hw-arm7-debug-unittests:
@@ -581,6 +582,7 @@ android-hw-arm7-debug-unittests:
     - jsreftest
 
 android-hw-aarch64-debug-unittests:
+    - jittest
     - mochitest-media
     - mochitest-webgl1-core
     - mochitest-webgl1-ext
