--- a/taskcluster/ci/test/compiled.yml
+++ b/taskcluster/ci/test/compiled.yml
@@ -85,7 +85,7 @@ jittest:
             # Additionally, platforms contain suffixes like "/opt" or "/debug".
             (?=linux).*(?!-ccov)...../.*: []  # redundant with SM(...)
             (?=windows).*(?!-ccov)...../.*: []  # redundant with SM(p)
-            android-hw-.*-aarch64/.*: []  # redundant with SM(p)
+            android-hw-.*-aarch64/debug: ['try', 'mozilla-central']
             android-hw-.*-api-16/debug: ['try', 'mozilla-central']
             default: built-projects
     chunks:
@@ -101,6 +101,7 @@ jittest:
         by-test-platform:
             windows10-64-ccov/.*: 7200
             macosx.*-ccov/.*: 7200
+            android-hw.*: 4500
             default: 3600
     mozharness:
         chunked:
