Bug 1617889 - Update expected fail on linux64 QuantumRender debug. CLOSED TREE
Differential Revision: https://phabricator.services.mozilla.com/D67363

--- a/testing/web-platform/meta/html/cross-origin-opener-policy/coop-sandbox.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/coop-sandbox.https.html.ini
@@ -1,4 +1,5 @@
 [coop-sandbox.https.html]
   [<iframe sandbox="allow-popups allow-scripts"> Sandboxed Cross-Origin-Opener-Policy popup should result in a network error]
-    expected: FAIL
-
+    expected:
+      if (os == "linux") and (processor == "x86_64") and debug and webrender: PASS
+      FAIL
