Bug 1620077 - part1 : Turn on the pref 'dom.media.mediasession.enabled' on Nightly. r=chunmin
Differential Revision: https://phabricator.services.mozilla.com/D65409

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -1999,7 +1999,7 @@
 # Media Session API
 - name: dom.media.mediasession.enabled
   type: bool
-  value: false
+  value: @IS_NIGHTLY_BUILD@
   mirror: always
 
 # Enable meta-viewport support in remote APZ-enabled frames.
