Bug 1623469 - Add a pref to disable synchronization transform animations with geometric animations. r=boris
Differential Revision: https://phabricator.services.mozilla.com/D67391

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -1367,6 +1367,13 @@
   value: true
   mirror: always
 
+# Synchronize transform animations with geometric animations on the
+# main thread.
+- name: dom.animations.mainthread-synchronization-with-geometric-animations
+  type: bool
+  value: true
+  mirror: always
+
 # Is support for AudioWorklet enabled?
 - name: dom.audioworklet.enabled
   type: bool
