Bug 1220810 - Hardcode localhost to loopback, r=ckerschb,dragana
Differential Revision: https://phabricator.services.mozilla.com/D64586

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -2,6 +2,8 @@
 tags = mtg webrtc
 subsuite = media
 scheme = https
+prefs =
+  network.proxy.allow_hijacking_localhost=true
 support-files =
   head.js
   dataChannel.js
