--- a/taskcluster/ci/instrumented-build/kind.yml
+++ b/taskcluster/ci/instrumented-build/kind.yml
@@ -172,9 +172,8 @@ jobs:
         shipping-product: firefox
         treeherder:
             platform: windows2012-32-shippable/opt
-        worker-type: b-linux
+        worker-type: b-win2012
         worker:
-            docker-image: {in-tree: debian9-amd64-build}
             env:
                 TOOLTOOL_MANIFEST: "browser/config/tooltool-manifests/win32/releng.manifest"
         run:
@@ -182,29 +181,20 @@ jobs:
             mozconfig-variant: profile-generate
             config:
                 - builds/releng_base_firefox.py
-                - builds/releng_base_linux_64_builds.py
+                - builds/taskcluster_base_windows.py
+                - builds/taskcluster_base_win32.py
             tooltool-downloads: internal
             extra-config:
                 stage_platform: win32
-                mozconfig_platform: win32
-                env:
-                    LD_PRELOAD: "/builds/worker/fetches/liblowercase/liblowercase.so"
-                    LOWERCASE_DIRS: "/builds/worker/checkouts/gecko/vs2017_15.8.4"
         fetches:
             toolchain:
-                - linux64-binutils
-                - linux64-clang-win-cross
-                - linux64-rust-cross
-                - linux64-rust-size
-                - linux64-nasm
-                - linux64-node
-                - linux64-cbindgen
-                - linux64-dump-syms
-                - linux64-wine
-                - linux64-liblowercase
-            fetch:
-                - nsis-3.01-win
-                - upx-3.95-win
+                - win64-clang-cl
+                - win64-dump-syms
+                - win64-rust
+                - win64-rust-size
+                - win64-cbindgen
+                - win64-nasm
+                - win64-node
 
     win64-shippable/opt:
         description: "Win64 Shippable PGO Instrumented"
@@ -214,9 +204,8 @@ jobs:
         shipping-product: firefox
         treeherder:
             platform: windows2012-64-shippable/opt
-        worker-type: b-linux
+        worker-type: b-win2012
         worker:
-            docker-image: {in-tree: debian9-amd64-build}
             env:
                 TOOLTOOL_MANIFEST: "browser/config/tooltool-manifests/win64/releng.manifest"
         run:
@@ -224,26 +213,17 @@ jobs:
             mozconfig-variant: profile-generate
             config:
                 - builds/releng_base_firefox.py
-                - builds/releng_base_linux_64_builds.py
+                - builds/taskcluster_base_windows.py
+                - builds/taskcluster_base_win64.py
             tooltool-downloads: internal
             extra-config:
                 stage_platform: win64
-                mozconfig_platform: win64
-                env:
-                    LD_PRELOAD: "/builds/worker/fetches/liblowercase/liblowercase.so"
-                    LOWERCASE_DIRS: "/builds/worker/checkouts/gecko/vs2017_15.8.4"
         fetches:
             toolchain:
-                - linux64-binutils
-                - linux64-clang-win-cross
-                - linux64-rust-cross
-                - linux64-rust-size
-                - linux64-nasm
-                - linux64-node
-                - linux64-cbindgen
-                - linux64-dump-syms
-                - linux64-wine
-                - linux64-liblowercase
-            fetch:
-                - nsis-3.01-win
-                - upx-3.95-win
+                - win64-clang-cl
+                - win64-dump-syms
+                - win64-rust
+                - win64-rust-size
+                - win64-cbindgen
+                - win64-nasm
+                - win64-node
