Bug 1616875: Create RTCRtpReceiver in c++, and move code into it from both JSImpl and other places in c++. Also, move some code from JSImpl to PeerConnectionImpl. r=jib,smaug
Differential Revision: https://phabricator.services.mozilla.com/D64235

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -625,8 +625,7 @@ DOMInterfaces = {
 
 'TransceiverImpl': {
     'nativeType': 'mozilla::TransceiverImpl',
-    'headerFile': 'TransceiverImpl.h',
-    'wrapperCache': False
+    'headerFile': 'TransceiverImpl.h'
 },
 
 'Plugin': {
@@ -683,6 +682,10 @@ DOMInterfaces = {
 
 'RTCDataChannel': {
     'nativeType': 'nsDOMDataChannel',
+},
+
+'RTCRtpReceiver': {
+    'headerFile': 'RTCRtpReceiver.h'
 },
 
 'RTCStatsReport': {
