--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -625,7 +625,8 @@ DOMInterfaces = {
 
 'TransceiverImpl': {
     'nativeType': 'mozilla::TransceiverImpl',
-    'headerFile': 'TransceiverImpl.h'
+    'headerFile': 'TransceiverImpl.h',
+    'wrapperCache': False
 },
 
 'Plugin': {
@@ -682,10 +683,6 @@ DOMInterfaces = {
 
 'RTCDataChannel': {
     'nativeType': 'nsDOMDataChannel',
-},
-
-'RTCRtpReceiver': {
-    'headerFile': 'RTCRtpReceiver.h'
 },
 
 'RTCStatsReport': {
