Bug 1627354: Part 2 - Update gradle files to set buildToolsVersion; r=nalexander
Per https://developer.android.com/studio/releases/build-tools, the default
version of the build tools used is internal to the Gradle plugin for Android,
which in the current version of Gradle is 28. To use 29, we need to explicitly
specify that in `.gradle` files using `buildToolsVersion`.

We also change the specification of `compileSdkVersion` to obtain that
information from the build configuration.

Differential Revision: https://phabricator.services.mozilla.com/D69632

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ allprojects {
         topsrcdir = gradle.mozconfig.topsrcdir
         topobjdir = gradle.mozconfig.topobjdir
 
-        compileSdkVersion = 28
+        buildToolsVersion = mozconfig.substs.ANDROID_BUILD_TOOLS_VERSION
+        compileSdkVersion = tryInt(mozconfig.substs.ANDROID_TARGET_SDK)
         targetSdkVersion = tryInt(mozconfig.substs.ANDROID_TARGET_SDK)
         minSdkVersion = tryInt(mozconfig.substs.MOZ_ANDROID_MIN_SDK_VERSION)
         manifestPlaceholders = [
