--- a/accessible/tests/browser/mac/browser.ini
+++ b/accessible/tests/browser/mac/browser.ini
@@ -14,5 +14,6 @@ support-files =
 [browser_details_summary.js]
 [browser_label_title.js]
 [browser_range.js]
+[browser_table.js]
 [browser_selectables.js]
 [browser_toggle_radio_check.js]
