--- a/browser/components/urlbar/tests/browser/browser.ini
+++ b/browser/components/urlbar/tests/browser/browser.ini
@@ -148,6 +148,7 @@ run-if = e10s
 [browser_retainedResultsOnFocus.js]
 [browser_revert.js]
 [browser_searchFunction.js]
+[browser_searchHistoryLimit.js]
 [browser_searchMode_alias_replacement.js]
 support-files =
   searchSuggestionEngine.xml
