--- a/testing/web-platform/meta/webaudio/the-audio-api/the-convolvernode-interface/realtime-conv.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-convolvernode-interface/realtime-conv.html.ini
@@ -2,6 +2,9 @@
   [X SNR is not greater than or equal to 83. Got -53.217347975452626.]
     expected: FAIL
 
+  [X SNR is not greater than or equal to 83. Got -53.217347975452576.]
+    expected: FAIL
+
   [< [test\] 1 out of 1 assertions were failed.]
     expected: FAIL
 
