Bug 1684183 - stop replacing file extensions for zip, json and xml files, and add a pref in case further issues appear for the other document types. r=evilpie, a=jcristau
Differential Revision: https://phabricator.services.mozilla.com/D100801

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -1005,6 +1005,11 @@
   value: @IS_NOT_MOZILLA_OFFICIAL@
   mirror: always
 
+- name: browser.download.sanitize_non_media_extensions
+  type: bool
+  value: true
+  mirror: always
+
 # Image document's automatic image sizing.
 - name: browser.enable_automatic_image_resizing
   type: bool
