Bug 1685430 - Allow running WebRender on ANGLE in the parent process to ride the trains. r=jrmuizel, a=jcristau
Depends on D100967

Differential Revision: https://phabricator.services.mozilla.com/D100968

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -4519,7 +4519,7 @@
 #ifdef XP_WIN
 - name: gfx.webrender.enabled-no-gpu-process-with-angle-win
   type: bool
-  value: @IS_EARLY_BETA_OR_EARLIER@
+  value: true
   mirror: once
 #endif
 
