Bug 1676627 - Add telemetry to track opening and closing of the fly out component on newtab page. r=thecount,nanj, a=pascalc
Differential Revision: https://phabricator.services.mozilla.com/D102765

--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -38,6 +38,8 @@ activity_stream:
       "CLICK",
       "CLICK_PRIVACY_INFO",
       "CLOSE_NEWTAB_PREFS",
+      "SHOW_PERSONALIZE",
+      "HIDE_PERSONALIZE",
       "DELETE",
       "DELETE_FROM_POCKET",
       "DELETE_CONFIRM",
