--- a/testing/web-platform/meta/forced-colors-mode/forced-colors-mode-45.html.ini
+++ b/testing/web-platform/meta/forced-colors-mode/forced-colors-mode-45.html.ini
@@ -1,8 +1,2 @@
 [forced-colors-mode-45.html]
-  expected:
-    if (os == "win") and debug and (processor == "x86_64") and webrender: ["PASS", "FAIL"]
-    if (os == "win") and debug and (processor == "x86_64") and not webrender: ["PASS", "FAIL"]
-    if (os == "win") and debug and (processor == "x86"): ["PASS", "FAIL"]
-    if (os == "mac") and webrender and not debug: ["PASS", "FAIL"]
-    if (os == "mac") and webrender and debug: ["PASS", "FAIL"]
-    if (os == "linux") and debug: ["PASS", "FAIL"]
+  expected: ["PASS", "FAIL"]
