Bug 1688368 - Check mFeedChardet before feeding the detector. r=emk, a=pascalc
Differential Revision: https://phabricator.services.mozilla.com/D102905

--- a/docshell/test/browser/browser.ini
+++ b/docshell/test/browser/browser.ini
@@ -70,6 +70,7 @@ support-files =
   file_slow_load.sjs
   file_bug1648464-1.html
   file_bug1648464-1-child.html
+  file_bug1688368-1.sjs
 
 [browser_backforward_userinteraction.js]
 support-files =
@@ -179,3 +180,4 @@ skip-if = (os == 'mac')
 support-files =
   file_basic_multipart.sjs
 [browser_bug1648464-1.js]
+[browser_bug1688368-1.js]
