--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -5153,7 +5153,7 @@
 # Whether we attempt to decode AVIF images or not.
 - name: image.avif.enabled
   type: RelaxedAtomicBool
-  value: true
+  value: false
   mirror: always
 
 # Whether we use dav1d (true) or libaom (false) to decode AVIF image
