Bug 1730194 - Prevent Copy button to send information to Cloud Clipboard and Clipboard History on Windows. r=dimi,johannh,cmartin a=RyanVM
Differential Revision: https://phabricator.services.mozilla.com/D125831

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -1481,6 +1481,15 @@
 #endif
   mirror: always
 
+#ifdef XP_WIN
+  # allow to copy clipboard data to Clipboard History/Cloud
+  # (used on sensitive data in about:logins and Private Browsing)
+-   name: clipboard.copyPrivateDataToClipboardCloudOrHistory
+    type: bool
+    value: false
+    mirror: always
+#endif
+
 #---------------------------------------------------------------------------
 # Prefs starting with "consoleservice."
 #---------------------------------------------------------------------------
