Bug 1734237 - Remove active tab border from Soft/Balanced themes and update previews. r=jaws, a=RyanVM
Differential Revision: https://phabricator.services.mozilla.com/D127587

--- a/browser/themes/addons/monochromatic/abstract/balanced/manifest.json
+++ b/browser/themes/addons/monochromatic/abstract/balanced/manifest.json
@@ -16,7 +16,7 @@
       "tab_background_text": "hsl(0, 0%, 100%)",
       "tab_text": "hsl(0, 0%, 0%)",
       "tab_selected": "hsl(16, 73%, 97%)",
-      "tab_line": "hsl(0, 0%, 0%)",
+      "tab_line": "transparent",
       "tab_loading": "hsl(15, 62%, 40%)",
       "tab_loading_inactive": "hsl(16, 100%, 82%)",
       "frame": "hsl(15, 62%, 34%)",
