--- a/browser/themes/addons/monochromatic/cheers/balanced/manifest.json
+++ b/browser/themes/addons/monochromatic/cheers/balanced/manifest.json
@@ -16,7 +16,7 @@
       "tab_background_text": "hsl(0, 0%, 0%)",
       "tab_text": "hsl(0, 0%, 100%)",
       "tab_selected": "hsl(0, 0%, 20%)",
-      "tab_line": "hsl(0, 0%, 0%)",
+      "tab_line": "transparent",
       "tab_loading": "hsl(42, 95%, 60%)",
       "tab_loading_inactive": "hsl(42, 100%, 27%)",
       "frame": "hsl(42, 95%, 60%)",
