--- a/browser/themes/addons/monochromatic/cheers/soft/manifest.json
+++ b/browser/themes/addons/monochromatic/cheers/soft/manifest.json
@@ -16,7 +16,7 @@
       "tab_background_text": "hsl(0, 0%, 0%)",
       "tab_text": "hsl(0, 0%, 0%)",
       "tab_selected": "hsl(0, 0%, 100%)",
-      "tab_line": "hsl(0, 0%, 0%)",
+      "tab_line": "transparent",
       "tab_loading": "hsl(42, 100%, 30%)",
       "tab_loading_inactive": "hsl(42, 100%, 30%)",
       "frame": "hsl(42, 100%, 70%)",
