--- a/browser/themes/addons/monochromatic/graffiti/balanced/manifest.json
+++ b/browser/themes/addons/monochromatic/graffiti/balanced/manifest.json
@@ -16,7 +16,7 @@
       "tab_background_text": "hsl(0, 0%, 100%)",
       "tab_text": "hsl(0, 0%, 0%)",
       "tab_selected": "hsl(278, 31%, 95%)",
-      "tab_line": "hsl(0, 0%, 0%)",
+      "tab_line": "transparent",
       "tab_loading": "hsl(278, 32%, 35%)",
       "tab_loading_inactive": "hsl(279, 77%, 95%)",
       "frame": "hsl(278, 33%, 40%)",
