Bug 1733958 - Set network.cache.bug1708673 to false. r=nhnt11, a=RyanVM
Bug 1731054 and bug 1708673 caused a performance regression.
We should disable the pref (on beta) to fix the regression while we investigate the causes.

Differential Revision: https://phabricator.services.mozilla.com/D128052

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -9938,7 +9938,7 @@
 # If no regressions occur this pref should be removed.
 - name: network.cache.bug1708673
   type: RelaxedAtomicBool
-  value: true
+  value: false
   mirror: always
 
 #  This is used for a temporary workaround for a web-compat issue. If pref is
