Bug 1735976 - Update Firefox Suggest preferences: Part 3 - Add telemetry for the new data-collection pref. r=nanj a=RyanVM
This adds telemetry for the new data-collection pref:

* Adds a `data_collect_toggled` object to the `contextservices.quicksuggest`
  telemetry event
* Adds the new pref to telemetry environment

Depends on D128661

Differential Revision: https://phabricator.services.mozilla.com/D128665

--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -2922,6 +2922,21 @@ installation:
     expiry_version: "100"
 
 contextservices.quicksuggest:
+  data_collect_toggled:
+    objects: ["enabled", "disabled"]
+    release_channel_collection: opt-out
+    products:
+      - "firefox"
+    record_in_processes: ["main"]
+    description: >
+      This is recorded when the
+      `browser.urlbar.quicksuggest.dataCollection.enabled` boolean pref is
+      toggled.
+    bug_numbers: [1735976]
+    notification_emails:
+      - fx-search@mozilla.com
+      - adw@mozilla.com
+    expiry_version: never
   enable_toggled:
     objects: ["enabled", "disabled"]
     release_channel_collection: opt-out
