Bug 1735976 - Update Firefox Suggest preferences: Part 4 - Migrate suggest.quicksuggest to suggest.quicksuggest.nonsponsored. r=nanj a=RyanVM
Now that we're likely not targeting a 94 dot release anymore, I'd like to go
ahead and rename the `suggest.quicksuggest` pref to
`suggest.quicksuggest.nonsponsored` as we considered doing before. There won't
be a better time to do it.

Depends on D128665

Differential Revision: https://phabricator.services.mozilla.com/D130565

--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -2944,8 +2944,9 @@ contextservices.quicksuggest:
       - "firefox"
     record_in_processes: ["main"]
     description: >
-      This is recorded when the `browser.urlbar.suggest.quicksuggest` boolean
-      pref is toggled.
+      This is recorded when the
+      `browser.urlbar.suggest.quicksuggest.nonsponsored` boolean pref is
+      toggled.
     bug_numbers: [1693126]
     notification_emails:
       - fx-search@mozilla.com
