--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -1595,14 +1595,15 @@ datasanitization:
       - 1617241
       - 1645089
       - 1678210
+      - 1744559
     description: >
       A count of how many "session" cookie exceptions a user has set.
     expires: never
     kind: uint
     notification_emails:
-      - ewright@mozilla.com
+      - pbz@mozilla.com
       - seceng-telemetry@mozilla.com
-    release_channel_collection: opt-in
+    release_channel_collection: opt-out
     products:
       - 'firefox'
     record_in_processes:
