Bug 1740965 - Part 1: Enable Firefox Suggest suggestions by default in the online scenario. r=nanj,a=dsmith
This enables suggestions by default in the online scenario. Data collection is
still disabled by default. With this revision, there's now no difference between
online and offline in terms of defaults.

Part 2 of this bug will modify the opt-in modal so that opting in or out affects
only the data-collection pref and not suggestions like it currently does.

For users who were already enrolled in online, saw the modal, and did not opt in
or otherwise enable suggestions, suggestions will remain disabled when they
upgrade. Users in online who did enable suggestions will continue to see them
when they upgrade. Users in online who did *not* see the modal will also have
suggestions enabled when they upgrade. That's unfortunate since they currently
have suggestions disabled, but based on telemetry data, the number of these
users is small, and it's a little risky to handle that case specifically because
if we're not careful we could end up disabling suggestions for all users coming
from 94.0.1 and earlier who enroll in online in the future. The code comment in
`UrlbarPrefs._migrateFirefoxSuggestPrefsUnversionedTo2Online()` and discussion
in D131751 talk about this.

For all other users, suggestions will default to enabled when/if they are
enrolled in online.

I added another prefs migration to implement all this.

I wrote a [test plan doc](https://docs.google.com/document/d/1tcbrBZmIaL_cQhvycoVL602kQqFtQvOBRhKV9zKqghE/edit?usp=sharing) to make sure all relevant upgrade paths work correctly
and I've verified it myself. I also added new automated tests of course.

Differential Revision: https://phabricator.services.mozilla.com/D131751

--- a/browser/components/urlbar/tests/quicksuggest/unit/xpcshell.ini
+++ b/browser/components/urlbar/tests/quicksuggest/unit/xpcshell.ini
@@ -7,4 +7,5 @@ firefox-appdir = browser
 [test_quicksuggest_keywordtree.js]
 [test_quicksuggest_merino.js]
 [test_quicksuggest_migrate_v1.js]
+[test_quicksuggest_migrate_v2.js]
 [test_quicksuggest_offlineDefault.js]
