Bug 1745660 - Flush FOG IPC every 100k samples r=TravisLong,a=dsmith
Differential Revision: https://phabricator.services.mozilla.com/D133664

--- a/toolkit/components/glean/tests/xpcshell/xpcshell.ini
+++ b/toolkit/components/glean/tests/xpcshell/xpcshell.ini
@@ -2,6 +2,8 @@
 [DEFAULT]
 firefox-appdir = browser
 
+[test_FOGIPCLimit.js]
+
 [test_FOGPrefs.js]
 skip-if = os == "android" # FOG isn't responsible for monitoring prefs and controlling upload on Android
 
