Bug 1824038: test(webgpu): expect intermittent `FAIL` from Linux for `webgpu:api,operation,adapter,requestAdapter:requestAdapter:*` cases where `forceFallbackAdapter=true` r=webgpu-reviewers,jgilbert
Depends on D174125

Differential Revision: https://phabricator.services.mozilla.com/D174126

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/1/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/1/cts.https.html.ini
@@ -20,16 +20,25 @@
   [:powerPreference="_undef_";forceFallbackAdapter=true]
     expected:
       if os == "win": FAIL
+      # This intermittently fails on Linux shippable.
+      # See <https://bugzilla.mozilla.org/show_bug.cgi?id=1824038>.
+      if os == "linux": [PASS, FAIL]
       PASS
 
   [:powerPreference="low-power";forceFallbackAdapter=true]
     expected:
       if os == "win": FAIL
+      # This intermittently fails on Linux shippable.
+      # See <https://bugzilla.mozilla.org/show_bug.cgi?id=1824038>.
+      if os == "linux": [PASS, FAIL]
       PASS
 
   [:powerPreference="high-performance";forceFallbackAdapter=true]
     expected:
       if os == "win": FAIL
+      # This intermittently fails on Linux shippable.
+      # See <https://bugzilla.mozilla.org/show_bug.cgi?id=1824038>.
+      if os == "linux": [PASS, FAIL]
       PASS
 
 
