Bug 1825673 - Implement WEBGL_provoking_vertex. r=gfx-reviewers,webidl,lsalzman,saschanaz
Differential Revision: https://phabricator.services.mozilla.com/D174197

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1217,6 +1217,11 @@ DOMInterfaces = {
     'headerFile': 'ClientWebGLExtensions.h'
 },
 
+'WEBGL_provoking_vertex': {
+    'nativeType': 'mozilla::ClientWebGLExtensionProvokingVertex',
+    'headerFile': 'ClientWebGLExtensions.h'
+},
+
 'OES_draw_buffers_indexed': {
     'nativeType': 'mozilla::ClientWebGLExtensionDrawBuffersIndexed',
     'headerFile': 'ClientWebGLExtensions.h'
