Bug 1810753 - Add test for downloads API + DNR r=rpl
Differential Revision: https://phabricator.services.mozilla.com/D174313

--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
@@ -123,6 +123,8 @@ skip-if =
 [test_ext_debugging_utils.js]
 [test_ext_dnr_allowAllRequests.js]
 [test_ext_dnr_api.js]
+[test_ext_dnr_download.js]
+skip-if = os == "android" # Android: Bug 1680132; downloads.download goes through the embedder app instead of Gecko.
 [test_ext_dnr_dynamic_rules.js]
 [test_ext_dnr_modifyHeaders.js]
 [test_ext_dnr_private_browsing.js]
@@ -355,7 +357,7 @@ skip-if =
   os == "android" && processor == 'x86_64' # Bug 1683253
 [test_ext_webRequest_containerIsolation.js]
 [test_ext_webRequest_download.js]
-skip-if = os == "android" # Android: Bug 1680132
+skip-if = os == "android" # Android: Bug 1680132; downloads.download goes through the embedder app instead of Gecko.
 [test_ext_webRequest_filterTypes.js]
 [test_ext_webRequest_from_extension_page.js]
 [test_ext_webRequest_incognito.js]
