--- a/.github/workflows/linux-build-flatpak.yml
+++ b/.github/workflows/linux-build-flatpak.yml
@@ -132,7 +132,7 @@ jobs:
         floorp -foreground -height 1080 -width 1920 &
         sleep 5
         pkill floorp
-        floorp -foreground about:newtab &
+        ./bin/floorp -foreground about:newtab &
         sleep 10
         import -window root -crop 1920x1080+0+0 $(pwd)/flathub-screenshot.png
         mkdir publish
