--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -33,6 +33,38 @@ start = "2020-11-03"
 end = "2024-03-31"
 notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
 
+[[wildcard-audits.mozdevice]]
+who = "Henrik Skupin <mail@hskupin.info>"
+criteria = "safe-to-run"
+user-id = 22262
+start = "2020-11-03"
+end = "2024-03-31"
+notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
+
+[[wildcard-audits.mozprofile]]
+who = "Henrik Skupin <mail@hskupin.info>"
+criteria = "safe-to-deploy"
+user-id = 22262
+start = "2020-11-03"
+end = "2024-03-31"
+notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
+
+[[wildcard-audits.mozrunner]]
+who = "Henrik Skupin <mail@hskupin.info>"
+criteria = "safe-to-deploy"
+user-id = 22262
+start = "2020-11-03"
+end = "2024-03-31"
+notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
+
+[[wildcard-audits.mozversion]]
+who = "Henrik Skupin <mail@hskupin.info>"
+criteria = "safe-to-run"
+user-id = 22262
+start = "2020-11-03"
+end = "2024-03-31"
+notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
+
 [[wildcard-audits.ohttp]]
 who = "Martin Thomson <mt@lowentropy.net>"
 criteria = "safe-to-deploy"
@@ -1380,45 +1412,6 @@ delta = "0.7.0 -> 0.7.0@git:7d76616d27b9dc87fe3a94639b8b4f947d52a6aa"
 who = "Mike Hommey <mh+mozilla@glandium.org>"
 criteria = "safe-to-deploy"
 delta = "0.5.3 -> 0.6.2"
-
-[[audits.mozdevice]]
-who = "Henrik Skupin <mail@hskupin.info>"
-criteria = "safe-to-run"
-version = "0.5.1"
-notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
-
-[[audits.mozprofile]]
-who = "Henrik Skupin <mail@hskupin.info>"
-criteria = "safe-to-deploy"
-version = "0.9.0"
-notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
-
-[[audits.mozprofile]]
-who = "Henrik Skupin <mail@hskupin.info>"
-criteria = "safe-to-deploy"
-delta = "0.9.0 -> 0.9.1"
-
-[[audits.mozrunner]]
-who = "Henrik Skupin <mail@hskupin.info>"
-criteria = "safe-to-deploy"
-version = "0.15.0"
-notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
-
-[[audits.mozrunner]]
-who = "Henrik Skupin <mail@hskupin.info>"
-criteria = "safe-to-deploy"
-delta = "0.15.0 -> 0.15.1"
-
-[[audits.mozversion]]
-who = "Henrik Skupin <mail@hskupin.info>"
-criteria = "safe-to-run"
-version = "0.5.0"
-notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
-
-[[audits.mozversion]]
-who = "Henrik Skupin <mail@hskupin.info>"
-criteria = "safe-to-run"
-delta = "0.5.0 -> 0.5.1"
 
 [[audits.naga]]
 who = "Dzmitry Malyshau <kvark@fastmail.com>"
