Bug 1825739 - Replace generic ESLint disable statements with specific and prettier ones for formautofill. r=credential-management-reviewers,dimi
Depends on D174227

Differential Revision: https://phabricator.services.mozilla.com/D174228

--- a/.prettierignore
+++ b/.prettierignore
@@ -56,3 +56,7 @@ devtools/shared/plural-form.js
 
 # Ignore backgroundtasks preferences files.
 toolkit/components/backgroundtasks/defaults
+
+# A mainly-imported file, that we don't want to format, but want to keep an eye
+# on with the other imported files.
+toolkit/components/formautofill/CreditCardRuleset.jsm
